main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');

/* http://meyerweb.com/eric/tools/css/reset/
  v2.0 | 20110126
  License: none (public domain)
*/

html,
body,
div,
h1 {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

body {
  line-height: 1;
  font-family: Inter;
  font-weight: 400;
  color: #000;
  white-space: nowrap;
  height: 100dvh;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

ol,
ul {
  list-style: none;
  padding: 0 0 0 1.75rem;
}

li {
  position: relative;
}

/* ol::after {
  content: ']';
  color: #F2CAB8;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 176.523%;
  margin-left: -1.75rem;
} */

span {
  font-size: 1rem;
  font-style: normal;
  line-height: 176.523%;
}

.number-span {
  color: #BFBFBF;
}


.name-span {
  color: #4E9590;
}

.value-span {
  color: #000;
}

.collapsed {
  color: #F2CAB8;
  font-weight: 700;
  line-height: 176.523%;
}

#app-title {
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  margin-bottom: 1.5rem;
}

#app-subtitle {
  font-size: 24px;
  font-style: normal;
  line-height: normal;
  margin-bottom: 1.5rem;
}

#app-button {
  display: flex;
  padding: 0.375rem 0.75rem;
  justify-content: center;
  align-items: center;
  gap: 0.625rem;
  border-radius: 5px;
  border: 1px solid #000;
  opacity: 0.7;
  background: linear-gradient(180deg, #E4E4E4 0%, #F7F7F7 100%);
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  margin-bottom: 1.5rem;
}

#app-button:hover {
  background: hsl(0, 0%, 60%);
}

#error-message {
  color: #BF0E0E;
  font-size: 1rem;
  font-style: normal;
  line-height: normal;
}

#file-title {
  font-size: 2rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

